--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -337,7 +337,7 @@
     </svg>
 
   </div>
-
+  <app-stock-item></app-stock-item>
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
