--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -338,6 +338,7 @@
 
   </div>
   <app-stock-item></app-stock-item>
+  <app-product-item></app-product-item>
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
