--- a/src/app/product/product-item-2/product-item.component.html
+++ b/src/app/product/product-item-2/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="product" [class]="product.isPromotion ? 'promotion' : 'normal'">
+<!-- <div class="product" [class]="product.isPromotion ? 'promotion' : 'normal'">
   <div>
     <img [src]="product.img" />
   </div>
@@ -15,4 +15,6 @@
     <option [value]="qty" *ngFor="let qty of quantities">{{qty}}</option>
   </select>
 </div>
-<div class="cart">數量{{ cartCount }}</div>
+<div class="cart">數量{{ cartCount }}</div> -->
+
+<!-- <app-product-component [product]="product" *ngFor="let product of products; index as i"></app-product-component> -->
